--- a/qiyexiaohao/center/myOtherNumber.html
+++ b/qiyexiaohao/center/myOtherNumber.html
@@ -8,52 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../css/common.css" />
 		<link rel="stylesheet" href="../css/iconfont.css" />
-		<style>
-			.mui-content {
-				background-color: #f7f7f7;
-			}
-			
-			.mui-table-view-cell {
-				padding: 0.5rem 0.62rem;
-			}
-			
-			.line_2 {
-				margin: 6px 0 0 0;
-			}
-			
-			.mui-table-view:before,
-			.mui-table-view:after {
-				height: 0;
-			}
-			
-			.main {
-				margin: 10px;
-			}
-			
-			.main>ul {
-				border-radius: 10px;
-			}
-			
-			.mar_R {
-				margin: 0 5px 0 0;
-			}
-			.btns {
-				margin: 10% 0 0;
-				text-align: center;
-			}
-			
-			.btns>button {
-				width: 100px;
-				border-radius: 10px;
-			}
-			
-			.mui-card .mui-navigate-right ._h{
-				padding: 10px 0;
-			}
-			.mui-table-view-cell.mui-active{
-				background-color: #fff;
-			}
-		</style>
+		<link rel="stylesheet" href="../css/style/myOtherNumber.css" />
 	</head>
 
 	<body>
