--- a/qiyexiaohao/login.html
+++ b/qiyexiaohao/login.html
@@ -51,8 +51,8 @@
 			App({
 				el: '#app',
 				data: {
-					account:'13123456788',
-					password:'123456'
+					account:'',
+					password:''
 				},
 				plusReady: {
 					init: function() {
