--- a/qiyexiaohao/c_contact_mint.html
+++ b/qiyexiaohao/c_contact_mint.html
@@ -50,6 +50,24 @@
 				plusReady: {
 					init: function() {
 						self = this;
+						plus.nativeUI.showWaiting();
+						_.later(function(){
+							self.getAddressBook();
+						},500)
+					}
+				},
+				methods: {
+					getAddressBook:function(){
+						if(plus.os.name == 'Android') {
+							var Context = plus.android.runtimeMainActivity();
+							//检测是否打开了此权限
+							var res = plus.android.invoke(Context, "checkSelfPermission", "android.permission.READ_CONTACTS");
+							console.log("res======" + JSON.stringify(res));
+							if(res != 0){
+								_.alert("请从系统设置中设置\n开启通讯录访问\n后重试", "权限不足");
+								return;
+							}
+						}
 						plus.contacts.getAddressBook(plus.contacts.ADDRESSBOOK_PHONE, function(addressbook) {
 							addressbook.find(["displayName", "phoneNumbers","organizations"], function(contacts) {
 								console.log('contacts1===' + JSON.stringify(contacts));
@@ -83,18 +101,19 @@
 									contactsDataTmp.push(obj);
 								})
 								self.contactsData = contactsDataTmp; //赋值
+								plus.nativeUI.closeWaiting(); 
 								console.log("contacts====" + JSON.stringify(self.contactsData));
 							}, function() {
-								mui.toast("获取电话簿失败 ");
+								plus.nativeUI.closeWaiting(); 
+								_.toast("获取电话簿失败 ");
 							}, {
 								multiple: true
 							});
 						}, function(e) {
-							mui.toast("获取电话簿失败 " + e.message);
+							plus.nativeUI.closeWaiting(); 
+							_.toast("获取电话簿失败 " + e.message);
 						});
-					}
-				},
-				methods: {
+					},
 					unique: function(arr) {
 						var tmp = new Array();
 						for(var i in arr) {
